--- a/Balosar.Client/Pages/Index.razor
+++ b/Balosar.Client/Pages/Index.razor
@@ -1,7 +1,9 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
+<h1>Index</h1>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
+<p>
+	This is the home page
+</p>
