--- a/Balosar.Client/Shared/MainLayout.razor
+++ b/Balosar.Client/Shared/MainLayout.razor
@@ -1,91 +1,32 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <div class="main">
-        <div class="top-row px-4 auth">
-            <LoginDisplay />
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
-        <div class="content px-4">
-            @Body
-        </div>
-    </div>
+	@if (!hideSidebar)
+	{
+		<div class="sidebar">
+			<SideNav ToggleNav=ToggleNav />
+		</div>
+	}
+	<div class="top-row">
+		<NavBar ShowNav="hideSidebar" ToggleNav=ToggleNav />
+	</div>
+	<div class="@MainClass ">
+		<div class="content px-4">
+			@Body
+		</div>
+	</div>
+	<footer>
+		Built by <a href="https://webres.solutions" target="_blank" style="color: #b2424d;">Webres Solutions</a>
+	</footer>
 </div>
-<style>
-.page {
-    position: relative;
-    display: flex;
-    flex-direction: column;
+<MudThemeProvider />
+<MudPopoverProvider />
+<MudDialogProvider MaxWidth="MaxWidth.Large" />
+<MudSnackbarProvider />s
+@code {
+	private bool hideSidebar = false;
+
+	private void ToggleNav() => hideSidebar = !hideSidebar;
+
+	private string MainClass => hideSidebar ? "main-full" : "main";
 }
-
-.main {
-    flex: 1;
-}
-
-.sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
-}
-
-.top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
-    height: 3.5rem;
-    display: flex;
-    align-items: center;
-}
-
-    .top-row ::deep a, .top-row .btn-link {
-        white-space: nowrap;
-        margin-left: 1.5rem;
-    }
-
-    .top-row a:first-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-@@media (max-width: 640.98px) {
-    .top-row:not(.auth) {
-        display: none;
-    }
-
-    .top-row.auth {
-        justify-content: space-between;
-    }
-
-    .top-row a, .top-row .btn-link {
-        margin-left: 0;
-    }
-}
-
-@@media (min-width: 641px) {
-    .page {
-        flex-direction: row;
-    }
-
-    .sidebar {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
-    }
-
-    .top-row {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
-
-    .main > div {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }
-}
-
-</style>
