--- a/Balosar.Client/_Imports.razor
+++ b/Balosar.Client/_Imports.razor
@@ -8,5 +8,12 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using MudBlazor
 @using Portal.Client
 @using Portal.Client.Shared
+@using Portal.Client.Components.UIComponents;
+
+@inject IDialogService _dialogService;
+@inject NavigationManager _navigationManager;
+@inject ISnackbar _snackbar;
+@inject IJSRuntime _jsRuntime;
