--- a/Portal.Client/Components/UIComponents/NavBar.razor.css
+++ b/Portal.Client/Components/UIComponents/NavBar.razor.css
@@ -1,33 +1,9 @@
-ul > li {
-    list-style: none;
+.auth-controls > a{
+    font-size: 0.9rem;
 }
-
-.search-box{
-    width: 200px;
+.auth-controls > button{
+    font-size: 0.9rem;
 }
-
-.nav-item {
+.auth-controls > div > a{
+    font-size: 0.9rem;
 }
-    .nav-item:first-of-type {
-    }
-
-    .nav-item:last-of-type {
-    }
-
-    .nav-item ::deep a {
-        align-items: center;
-        line-height: 3rem;
-        transition: all ease-in-out 0.2s;
-    }
-
-        .nav-item ::deep a.active {
-            color: var(--color-primary) !important;
-            background-color: var(--color-background) !important;
-            /*font-weight: bold;*/
-        }
-
-        .nav-item ::deep a:hover {
-            color: var(--color-secondary) !important;
-            transition: all ease-in-out 0.2s;
-            transform: translateY(-3px);
-        }
