--- a/Portal.Client/_Imports.razor
+++ b/Portal.Client/_Imports.razor
@@ -12,6 +12,7 @@
 @using Portal.Client
 @using Portal.Client.Shared
 @using Portal.Client.Components.UIComponents;
+@using Portal.Client.Webmodels;
 
 @inject IDialogService _dialogService;
 @inject NavigationManager _navigationManager;
