--- a/Portal.Client/Components/UIComponents/SideNav.razor
+++ b/Portal.Client/Components/UIComponents/SideNav.razor
@@ -1,35 +1,38 @@
-﻿<nav class="ps-3">
-	<ul class="nav flex-column mt-3 ">
-		<li class="nav-item mb-3">
+﻿<nav class="d-flex justify-content-center">
+	<ul class="nav flex-column mt-3">
+		<li class="mb-3">
 			<NavLink href="/">
 				<img alt="PRS" src="/images/PRS-Primary-Logo.svg" style="width: 120px" />
 			</NavLink>
 		</li>
-		<li class="nav-item">
-			<NavLink href="Contacts"><MudIcon Icon="@Icons.Material.Filled.People" Title="Home" />Contacts</NavLink>
-		</li>
-		<li class="nav-item">
-			<NavLink href="Jobs"><MudIcon Icon="@Icons.Material.Filled.Home" Title="Home" />Jobs</NavLink>
-		</li>
-		<li class="nav-item">
-			<NavLink href="Quotes">Quotes</NavLink>
-		</li>
-		<li class="nav-item">
-			<NavLink href="Councils">Councils</NavLink>
-		</li>
-		<li class="nav-item">
-			<NavLink href="Tools">Tools</NavLink>
-		</li>
-		<li class="nav-item">
-			<NavLink href="Admin">Admin</NavLink>
-		</li>
-		<li class="nav-item">
-			<NavLink href="Schedule">Schedule</NavLink>
-		</li>
+		@foreach (KeyValuePair<string, NavigationLink> link in links)
+		{
+			<li class="nav-item">
+				<NavElement Link=@link.Value />
+			</li>
+		}
 	</ul>
 </nav>
 
 @code {
 	[Parameter]
 	public required Action ToggleNav { get; set; }
+
+
+	private readonly Dictionary<string, NavigationLink> links = new()
+	{
+		// { "Home", new NavigationLink(){Link = "", Title = "Home", Icon = MudBlazor.Icons.Material.Filled.Home } },
+		{ "Jobs", new NavigationLink(){Link = "jobs", Title = "Jobs", Icon = "bi bi-wrench",
+			SubLinks = [
+				new NavigationLink() { Link = "tasks", Title = "Tasks", Icon = "bi bi-list-task"},
+				new NavigationLink() { Link = "notes", Title = "Notes", Icon = "bi bi-wrench"},
+				new NavigationLink() { Link = "invoices", Title = "Invoices", Icon = "bi bi-card-text" }
+			]}
+		},
+		{ "Quotes", new NavigationLink(){Link = "quotes", Title = "Quotes", Icon = "bi bi-receipt" } },
+		{ "Councils", new NavigationLink(){Link = "councils", Title = "Councils",Icon = "bi bi-people-fill"} },
+		{ "Tools", new NavigationLink(){Link = "tools", Title = "Tools",Icon = "bi bi-hammer"} },
+		{ "Admin", new NavigationLink(){Link = "admin", Title = "Admin",Icon = "bi bi-sliders"} },
+		{ "Schedule", new NavigationLink(){Link = "schedule", Title = "Schedule", Icon = "bi bi-calendar"} }
+	};
 }
