--- a/Portal.Client/wwwroot/css/app.css
+++ b/Portal.Client/wwwroot/css/app.css
@@ -2,6 +2,7 @@
 
 :root {
     --color-primary: #ff5020;
+    --color-primary-light: #ff957d;
     --color-secondary: #f2ecee;
     --color-background: #f5f5ff;
     --color-success: #63A46C;
@@ -9,17 +10,16 @@
     --color-grey: #F5F3F5;
     --color-white: #ffffff;
     --color-yellow: #a16207;
-    --border-rad: 15px;
+    --border-rad: 12px;
     --padding: 10px;
 }
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     background-color: var(--color-background) !important;
     transition: color 0.5s, background-color 0.5s;
     line-height: 1.6;
     font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    font-size: 15px;
+    font-size: 100%;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -34,6 +34,10 @@ a, .btn-link {
 ul {
     padding-left: 0 !important;
 }
+
+    ul > li {
+        list-style: none;
+    }
 
 .btn-primary {
     color: #fff;
@@ -166,4 +170,41 @@ ul {
 
 .border-rad {
     border-radius: var(--border-rad) !important;
+}
+
+
+.nav-item {
+}
+
+    .nav-item:first-of-type {
+    }
+
+    .nav-item:last-of-type {
+    }
+
+    .nav-item a {
+        padding: 10px 15px;
+        width: 100%;
+        /* align-items: center;*/
+        line-height: 3rem;
+        transition: all ease-in-out 0.2s;
+        font-size: 0.8rem;
+        height: 3rem;
+    }
+
+        .nav-item a.active {
+            background-color: var(--color-primary-light) !important;
+            color: var(--color-white) !important;
+            border-radius: var(--border-rad);
+            /*font-weight: bold;*/
+        }
+
+        .nav-item a:hover {
+            color: var(--color-primary) !important;
+            transition: all ease-in-out 0.1s;
+            transform: translateY(-3px);
+        }
+
+ul > li > a {
+    font-size: 0.8rem;
 }
