--- a/Portal.Client/Components/UIComponents/NavBar.razor
+++ b/Portal.Client/Components/UIComponents/NavBar.razor
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 
 @inject NavigationManager Navigation
-<nav class="w-100 d-flex justify-content-between">
+<nav class="w-100 d-flex justify-content-between py-2">
 	<MudTextField @bind-Value="SearchValue" Variant="Variant.Outlined" Placeholder="Search..." Style="width: 250px">
 	</MudTextField>
 	<div class="mt-4 d-flex flex-row pe-4">
