--- a/Portal.Client/Shared/MainLayout.razor.css
+++ b/Portal.Client/Shared/MainLayout.razor.css
@@ -4,28 +4,25 @@
     flex-direction: column;
 }
 
-.sidebar {
-    margin: 0;
-    padding: 0;
-    width: 150px !important;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
-    background-color: var(--color-white);
-}
+
 
 .main {
-    margin-left: 150px; /* Same as the width of the sidenav */
+    margin-left: 180px; /* Same as the width of the sidenav */
     margin-top: 75px;
 }
 
 .main-full {
-    margin-left: 0;
+    margin-top: 75px;
+    margin-left: 40px;
 }
 
 .content {
     min-height: 100vh;
+        margin-left: 40px;
 }
+    .content .full {
+        margin-left: 0px;
+    }
 
 .top-row {
     background-color: var(--color-white);
@@ -34,21 +31,20 @@
     display: flex;
     align-items: center;
     position: fixed;
-    width: calc(100% - 150px);
-    margin-left: 150px;
-    padding-left: 50px;
+    width: 100vw;
+    padding-left: 150px;
     transition: transform 0.3s ease-in-out;
-    z-index: 1000;
+    z-index: 10;
     /* box-shadow: 0 2px 4px rgba(0,0,0,0.1); */
 }
 
-.top-row.header-hidden {
-    transform: translateY(-100%);
-}
+    .top-row.header-hidden {
+        transform: translateY(-100%);
+    }
 
-.top-row.header-visible {
-    transform: translateY(0);
-}
+    .top-row.header-visible {
+        transform: translateY(0);
+    }
 
 /* When sidebar is hidden, adjust header width */
 .main-full + .top-row {
@@ -56,23 +52,23 @@
     margin-left: 0;
 }
 
-    .top-row ::deep a, .top-row .btn-link {
-        white-space: nowrap;
-        margin-left: 1.5rem;
-    }
+.top-row ::deep a, .top-row .btn-link {
+    white-space: nowrap;
+    margin-left: 1.5rem;
+}
 
-    .top-row a:first-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
+.top-row a:first-child {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 footer {
     text-align: center;
     padding: 1rem 0;
     width: 100%;
     margin-top: 2rem;
-    
 }
+
     footer > a {
         font-size: 0.9rem;
     }
