--- a/Portal.Client/App.razor
+++ b/Portal.Client/App.razor
@@ -1,9 +1,10 @@
+@using Microsoft.FluentUI.AspNetCore.Components
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(Program).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
                 <NotAuthorized>
-                    @if (!context.User.Identity.IsAuthenticated)
+                    @if (!context.User.Identity!.IsAuthenticated)
                     {
                         <RedirectToLogin />
                     }
@@ -21,3 +22,9 @@
         </NotFound>
     </Router>
 </CascadingAuthenticationState>
+
+<FluentToastProvider />
+<FluentDialogProvider />
+<FluentTooltipProvider />
+<FluentMessageBarProvider />
+<FluentMenuProvider />
