--- a/Portal.Client/Pages/Jobs.razor
+++ b/Portal.Client/Pages/Jobs.razor
@@ -1,21 +1,22 @@
 ﻿@page "/jobs"
+<Card Title="Jobs">
+	<ChildContent>
+		<div style="font-family: Inter, sans-serif; font-size: 24px; font-weight: 400; !important">
+			This should be in Inter font
+		</div>
+		<div style="font-family: Arial, sans-serif; font-size: 24px; font-weight: 400; !important">
+			This should be in Arial font (for comparison)
+		</div>
+		<div style="font-family: Satoshi, sans-serif; font-size: 24px; font-weight: 400;">
+			This should be in Satoshi font (for comparison)
+		</div>
 
-<h3>Jobs</h3>
-<div style="font-family: Inter, sans-serif; font-size: 24px; font-weight: 400; !important">
-	This should be in Inter font
-</div>
-<div style="font-family: Arial, sans-serif; font-size: 24px; font-weight: 400; !important">
-	This should be in Arial font (for comparison)
-</div>
-<div style="font-family: Satoshi, sans-serif; font-size: 24px; font-weight: 400;">
-	This should be in Satoshi font (for comparison)
-</div>
-
-<p>
-	Forecasts :
-</p>
-
-<FetchData/>
+		<p>
+			Forecasts :
+		</p>
+		<FetchData />
+	</ChildContent>
+</Card>
 
 @code {
 
