--- a/Portal.Client/_Imports.razor
+++ b/Portal.Client/_Imports.razor
@@ -8,15 +8,14 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using MudBlazor
 @using Portal.Client
 @using Portal.Client.Shared
 @using Portal.Client.Components.UIComponents;
 @using Portal.Client.Webmodels;
 @using Portal.Client.Components;
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using Microsoft.FluentUI.AspNetCore.Components
+
 @inject IAccessTokenProvider AuthorizationService
-@inject IDialogService _dialogService;
 @inject NavigationManager _navigationManager;
-@inject ISnackbar _snackbar;
 @inject IJSRuntime _jsRuntime;
