--- a/Portal.Client/wwwroot/css/app.css
+++ b/Portal.Client/wwwroot/css/app.css
@@ -1,94 +1,103 @@
-﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+﻿@import url("open-iconic/font/css/open-iconic-bootstrap.min.css");
 
 @font-face {
-    font-family: 'Inter';
+    font-family: "Inter";
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Inter Regular'), url('../fonts/Inter-Regular.woff') format('woff');
+    src:
+        local("Inter Regular"),
+        url("../fonts/Inter-Regular.woff") format("woff");
 }
 
-
 @font-face {
-    font-family: 'Inter';
+    font-family: "Inter";
     font-style: italic;
     font-weight: 400;
     font-display: swap;
-    src: local('Inter Italic'), url('../fonts/Inter-Italic.woff') format('woff');
+    src:
+        local("Inter Italic"),
+        url("../fonts/Inter-Italic.woff") format("woff");
 }
 
-
-
-
 @font-face {
-    font-family: 'Inter';
+    font-family: "Inter";
     font-style: normal;
     font-weight: 500;
     font-display: swap;
-    src: local('Inter Medium'), url('../fonts/Inter-Medium.woff') format('woff');
+    src:
+        local("Inter Medium"),
+        url("../fonts/Inter-Medium.woff") format("woff");
 }
 
-
 @font-face {
-    font-family: 'Inter';
+    font-family: "Inter";
     font-style: italic;
     font-weight: 500;
     font-display: swap;
-    src: local('Inter Medium Italic'), url('../fonts/Inter-MediumItalic.woff') format('woff');
+    src:
+        local("Inter Medium Italic"),
+        url("../fonts/Inter-MediumItalic.woff") format("woff");
 }
 
-
 @font-face {
-    font-family: 'Inter';
+    font-family: "Inter";
     font-style: normal;
     font-weight: 600;
     font-display: swap;
-    src: local('Inter Semi Bold'), url('../fonts/Inter-SemiBold.woff') format('woff');
+    src:
+        local("Inter Semi Bold"),
+        url("../fonts/Inter-SemiBold.woff") format("woff");
 }
 
-
 @font-face {
-    font-family: 'Inter';
+    font-family: "Inter";
     font-style: italic;
     font-weight: 600;
     font-display: swap;
-    src: local('Inter Semi Bold Italic'), url('../fonts/Inter-SemiBoldItalic.woff') format('woff');
+    src:
+        local("Inter Semi Bold Italic"),
+        url("../fonts/Inter-SemiBoldItalic.woff") format("woff");
 }
 
-
 @font-face {
-    font-family: 'Inter';
+    font-family: "Inter";
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: local('Inter Bold'), url('../fonts/Inter-Bold.woff') format('woff');
+    src:
+        local("Inter Bold"),
+        url("../fonts/Inter-Bold.woff") format("woff");
 }
 
-
 @font-face {
-    font-family: 'Inter';
+    font-family: "Inter";
     font-style: italic;
     font-weight: 700;
     font-display: swap;
-    src: local('Inter Bold Italic'), url('../fonts/Inter-BoldItalic.woff') format('woff');
+    src:
+        local("Inter Bold Italic"),
+        url("../fonts/Inter-BoldItalic.woff") format("woff");
 }
 
 @font-face {
-    font-family: 'Satoshi';
+    font-family: "Satoshi";
     font-style: italic;
     font-weight: 600;
     font-display: swap;
-    src: local('Satoshi Regular'), url('../fonts/Satoshi-Regular.woff2') format('woff2');
+    src:
+        local("Satoshi Regular"),
+        url("../fonts/Satoshi-Regular.woff2") format("woff2");
 }
 
 :root {
     --color-primary: #ff5020;
     --color-primary-light: #ff957d;
     --color-secondary: #f2ecee;
-    --color-background: #FAFAFA;
-    --color-success: #63A46C;
+    --color-background: #fafafa;
+    --color-success: #63a46c;
     --color-grey-dark: #808080;
-    --color-grey: #F5F3F5;
+    --color-grey: #f5f3f5;
     --color-white: #ffffff;
     --color-yellow: #a16207;
     --border-rad: 12px;
@@ -98,9 +107,23 @@
 html,
 body {
     background-color: var(--color-background) !important;
-    transition: color 0.5s, background-color 0.5s;
+    transition:
+        color 0.5s,
+        background-color 0.5s;
     line-height: 1.6;
-    font-family: Satoshi, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+    font-family:
+        Inter,
+        -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        "Fira Sans",
+        "Droid Sans",
+        "Helvetica Neue",
+        sans-serif;
     font-size: 100%;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -111,14 +134,14 @@ a,
 .btn-link {
     color: #1c1b1d;
     text-decoration: none;
-    font-size: 20px
+    font-size: 20px;
 }
 
 ul {
     padding-left: 0 !important;
 }
 
-ul>li {
+ul > li {
     list-style: none;
 }
 
@@ -132,7 +155,7 @@ ul>li {
     padding-top: 1.1rem;
 }
 
-.valid.modified:not([type=checkbox]) {
+.valid.modified:not([type="checkbox"]) {
     outline: 1px solid #26b050;
 }
 
@@ -162,7 +185,6 @@ ul>li {
     right: 0.75rem;
     top: 0.5rem;
 }
-
 
 .bg-white {
     background: white;
@@ -194,94 +216,35 @@ ul>li {
     box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px !important;
 }
 
-
-.mud-button-filled.mud-button-filled-primary {
-    border-radius: var(--border-rad);
-    box-shadow: none;
-    background-color: var(--color-primary) !important;
-}
-
-.mud-button-filled.mud-button-filled-success {
-    border-radius: var(--border-rad);
-    box-shadow: none;
-    background-color: var(--color-success) !important;
-}
-
-.mud-button-filled.mud-button-filled-secondary {
-    border-radius: var(--border-rad);
-    box-shadow: none;
-}
-
-.mud-button-filled.mud-button-filled-default {
-    border-radius: var(--border-rad);
-    box-shadow: none;
-}
-
-.mud-button-filled.mud-button-filled-info {
-    border-radius: var(--border-rad);
-    box-shadow: none;
-}
-
-.mud-secondary-text {
-    color: var(--color-secondary) !important;
-}
-
-.mud-tab.mud-tab-active {
-    color: var(--color-secondary) !important;
-}
-
-.mud-tab .mud-tab-active .mud-ripple .mud-tab-panel>* {
-    color: var(--color-secondary) !important;
-}
-
-.mud-tab-slider {
-    background: black !important;
-}
-
-.mud-input-outlined-border {
-    border-radius: var(--border-rad) !important;
-}
-
-.mud-table-cell.sticky-left {
-    z-index: auto !important;
-}
-
-.mud-input {
-    background: white !important;
-    border-radius: var(--border-rad) !important;
-    line-height: 0.7rem !important;
-}
-
 .border-rad {
     border-radius: var(--border-rad) !important;
 }
-
-
-
-
+a{
+    text-decoration: none !important;
+}
 .nav-item a {
     padding: 10px 15px;
-    width: 100%;
-    /* align-items: center;*/
     line-height: 3rem;
-    transition: all ease-in-out 0.2s;
+    transition: all ease-in-out 0.1s;
     font-size: 1rem;
     height: 3rem;
+    color: black;
+    border-radius: var(--border-rad);
+    text-decoration: none;
 }
 
 .nav-item a.active {
-    background-color: var(--color-primary-light) !important;
-    color: var(--color-white) !important;
+    color: var(--color-primary) !important;
     border-radius: var(--border-rad);
     /*font-weight: bold;*/
 }
 
 .nav-item a:hover {
-    color: var(--color-primary) !important;
+    color: var(--color-grey-dark) !important;
     transition: all ease-in-out 0.1s;
     transform: translateY(-3px);
 }
 
-ul>li>a {
+ul > li > a {
     font-size: 0.8rem;
 }
