--- a/Portal.Client/Components/UIComponents/NavBar.razor
+++ b/Portal.Client/Components/UIComponents/NavBar.razor
@@ -7,7 +7,7 @@
 		<img alt="PRS" src="/images/PRS-Primary-Logo.svg" style="width: 120px" />
 	</NavLink>
 	<div>
-		<FluentTextField @bind-Value=SearchValue Placeholder="Search PRS DB"></FluentTextField>
+		<textarea placeholder="Search PRS DB"></textarea>
 	</div>
 	<div class="mt-4 d-flex flex-row pe-4">
 		<div class="auth-controls">
