--- a/Portal.Client/Shared/MainLayout.razor
+++ b/Portal.Client/Shared/MainLayout.razor
@@ -17,6 +17,11 @@
     </footer>
 </div>
 
+<MudThemeProvider />
+<MudPopoverProvider />
+<MudDialogProvider MaxWidth="MaxWidth.Large" />
+<MudSnackbarProvider />
+
 @code {
     private bool hideSidebar = false;
     private bool headerVisible = true;
