--- a/Portal.Client/_Imports.razor
+++ b/Portal.Client/_Imports.razor
@@ -9,13 +9,19 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Portal.Client
+@using Portal.Client.Services.Instances
+@using Portal.Client.Services.Interfaces
 @using Portal.Client.Shared
 @using Portal.Client.Components.UIComponents;
 @using Portal.Client.Webmodels;
 @using Portal.Client.Components;
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
-@using Microsoft.FluentUI.AspNetCore.Components
+@using MudBlazor
 
-@inject IAccessTokenProvider AuthorizationService
+@inject IApiService _apiService;
+@inject IDialogService _dialogService;
 @inject NavigationManager _navigationManager;
+@inject ISnackbar _snackbar;
 @inject IJSRuntime _jsRuntime;
+@inject IAccessTokenProvider AuthorizationService
+@inject SessionStorage _sessionStorage;
