--- a/Portal.Client/Pages/Index.razor
+++ b/Portal.Client/Pages/Index.razor
@@ -4,7 +4,7 @@
 	<Authorized>
 		<Card Title="Index">
 			<ChildContent>
-				<div class="">
+				<div class="" style="overflow:hidden">
 					<a>Hello, @context.User!.Identity!.Name!</a>
 				</div>
 				<User />
