--- a/Portal.Client/Shared/MainLayout.razor
+++ b/Portal.Client/Shared/MainLayout.razor
@@ -7,6 +7,7 @@
     <div class="top-row @(headerVisible ? "header-visible" : "header-hidden")">
         <NavBar ShowNav="hideSidebar" ToggleNav=ToggleNav />
     </div>
+    <QuickSearch/>
     <div class="@MainClass">
         <div class="content px-4 @FullWidth">
             @Body
