--- a/Portal.Client/Components/UIComponents/Card.razor
+++ b/Portal.Client/Components/UIComponents/Card.razor
@@ -65,6 +65,10 @@
     public Func<Task>? Reload { get; set; }
 }
 <style>
+    .container{
+        overflow-x: scroll !important;
+    }
+
     .card-wrapper {
         position: relative;
     }
